--- a/src/app/components/patient-check-in/patient-check-in.component.html
+++ b/src/app/components/patient-check-in/patient-check-in.component.html
@@ -1,12 +1,14 @@
 <div class= "container" >
-    <div *ngIf="!patientCheck; else NewPatient" class= "patientCheckIn">
+   <div class= "patientCheckIn">
+       
         <form
+        
         #formDemo= "ngForm"
         class= "form-check-in "
-        (ngSubmit)= "onSubmit(firstName, lastName, dob)">
+        (ngSubmit)= "onSubmit(firstName, lastName, dob, feet, inches, weight, bloodtype, sex, allergies, vaccinations)">  
 
         <div class= "form-group">
-            <label for= "firstName">firstName</label>
+            <span class = "asterix">*</span><label for= "firstName">First Name:</label>
             <input
                 type= "text"
                 class= "form-control"
@@ -16,7 +18,7 @@
                 required
             />
             <br>
-                <label for= "lastName">lastName</label>
+            <span class = "asterix">*</span><label for= "lastName">Last Name:</label>
                 <input
                     type= "text"
                     class= "form-control"
@@ -26,7 +28,7 @@
                     required
                 />
             <br>
-                <label for= "dob">Date of Birth</label>
+                <span class = "asterix">*</span><label for= "dob">Date of Birth:</label>
                 <input
                     type= "date"
                     class= "form-control"
@@ -36,13 +38,73 @@
                     required
                 />
             <br>
+                <span>Height: </span>
+                <label for= "feet">feet:</label>
+                <input
+                    type= "number"
+                    min = ".5"
+                    class= "form-control"
+                    name= "feet"
+                    id= "feet"
+                    [(ngModel)] = "feet"
+                />
+                <label for= "inches">inches:</label>
+                <input
+                    type= "number"
+                    min = "0"
+                    class= "form-control"
+                    name= "inches"
+                    id= "inches"
+                    [(ngModel)] = "inches"
+                />
+            <br>
+                <label for= "weight">Weight (lbs.):</label>
+                <input
+                    type= "number"
+                    min = "0"
+                    class= "form-control"
+                    name= "weight"
+                    id= "weight"
+                    [(ngModel)] = "weight"
+                />
+                <span></span>
+            <br>
+            <label for="bloodtype">Bloodtype:</label>
+                <select id="bloodtype" name="bloodtype" class= "form-control" [(ngModel)] = "bloodtype">
+                    <option value="O-">O-</option>
+                    <option value="O+">O+</option>
+                    <option value="B-">B-</option>
+                    <option value="B+">B+</option>
+                    <option value="A-">A-</option>
+                    <option value="A+">A+</option>
+                    <option value="AB-">AB-</option>
+                    <option value="AB+">AB+</option>
+                </select>
+            <br>
+            <label for="sex">Sex:</label>
+                <select id="sex" name="sex" class= "form-control" [(ngModel)] = "sex">
+                    <option value="M">M</option>
+                    <option value="F">F</option>
+                    <option value="NB">NB</option>
+                </select>
+            <br>
+            <div id = "allergyanchor">Allergies:</div>
+            <br>
+            <div id = "vaccinationanchor">Vaccinations:</div>
+
         </div>
-        <button type= "submit" class= "btn btn-success submit-button" [disabled]= "!formDemo.valid">Get Patient</button>
+        <button type= "submit" class= "btn btn-success submit-button">Add Patient (This button doesn't work yet)</button>
     </form>
-    </div>
+    <!-- </div>
     <ng-template #NewPatient>
       <p>This is where the new patient registration goes</p>
-    </ng-template>
+    </ng-template> 
+
+
+
+  public allergies! : object[];
+  public vaccinations! : object[];
+-->
 </div>
 
 
