--- a/src/app/components/doctor/doctor.component.css
+++ b/src/app/components/doctor/doctor.component.css
@@ -3,12 +3,13 @@
     position: relative;
     color: rgb(0, 38, 74);
 }
-.background {
-    background:  rgba(200, 220, 180, 0.1);
+
+table td{
+    text-align: center;
 }
 
-table tr{
-    text-align: center;
+.background {
+    background:  rgba(200, 220, 180, 0.1);
 }
 
 .container{
@@ -29,24 +30,24 @@ table tr{
 }
 
 .search-area{
-    display: flex;
     margin-bottom: 100px;
-    position: relative;
     left: 0px;
 }
 
 .form-group {
-    width: 87%;
+    width: 100%;
     margin: 0px;
 }
 
 .btn-search {
     width: 12%;
     margin: 0px;
-    height: 35px;
-    position: absolute;
-    bottom: 0px; 
-    right: 0px;
+
+}
+
+.button-group{
+    display: block;
+    
 }
 
 input {
@@ -54,12 +55,13 @@ input {
     margin-right: 0px;
     padding-left: 10px;
     height: 35px;
-    position: absolute;
-    bottom: 0px;
-    left: 0px;
     border: 1px transparent;
     border-radius: 5px;
     background: rgba(196, 230, 83, 0.2);
+}
+
+.btn-add-patient {
+    margin: auto;
 }
 
 .btn-center {
@@ -69,7 +71,7 @@ input {
 }
 
 .table{
-    /* display: flex; */
+    display: flex;
     justify-content: center;
     margin: auto;
     background: rgba(200, 220, 180, 0.1);
@@ -83,3 +85,6 @@ table th {
 table th:last-child {
     border-right: none;
 }
+
+
+
