refresh token WIP

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -6,4 +6,5 @@
 <button (click)="register()">Register</button>
 <button (click)="getUser()">Get user</button> 
 <button (click)="logout()">Logout</button> 
+<button (click)="refreshToken()">Refresh Token</button>
 <!-- <a routerLink="signup" routerLinkActive="active"><button>Create Account</button></a> -->
