added ability to search for patients by doctor

--- a/src/app/components/doctor/doctor.component.html
+++ b/src/app/components/doctor/doctor.component.html
@@ -158,14 +158,14 @@
             </thead>
             <tbody>
                 <tr *ngFor="let patient of patientsArray">
-                    <td *ngIf="searchingDoctor"> Doctor Heinz Doofenzhmirts </td>
+                    <td *ngIf="searchingDoctor"> {{doctorName}}</td>
                     <td>{{patient.firstName}}</td>
                     <td>{{patient.lastName}}</td>
                     <td>{{patient.dob}}</td>
                     <!-- <td>{{patient.dob}}</td> -->
                     <td>
                         <ul>
-                            <li  *ngFor = "let allergy of patient.allergies">
+                            <li  *ngFor = "let allergy of patient.patientAllergies">
                                 {{allergy.allergy}}
                             </li>
                         </ul>
@@ -174,7 +174,7 @@
                     <td>{{patient.weight}}</td>
                     <td>
                         <ul>
-                            <li  *ngFor = "let vax of patient.vaccinations">
+                            <li  *ngFor = "let vax of patient.patientVaccinations">
                                 {{vax.vaccination}}
                             </li>
                         </ul>
