finished adding patients

--- a/src/app/components/registration/registration.component.html
+++ b/src/app/components/registration/registration.component.html
@@ -46,7 +46,7 @@
     <label for="RegistrationPassword">
       Password
     </label>
-    <input type="text" class="RegistrationPassword"
+    <input type="password" class="RegistrationPassword"
       #RegistrationPassword
       (keyup.enter)="updatePassword(RegistrationPassword.value)"
       (blur)="updatePassword(RegistrationPassword.value)"
