Adding logo to navbar

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -8,5 +8,8 @@
     <li class="nav-item">
         <a class="nav-link text-dark" [routerLink]="['']">Logout</a>
       </li>
+      <li class="nav-item">
+        <img src="/assets/img/WellNetLogo.png">
+      </li>
    
   </ul>
