--- a/src/app/lockout/lockout.component.html
+++ b/src/app/lockout/lockout.component.html
@@ -1,4 +1,15 @@
-
+<ul class="nav navbar-expand-lg navbar-light">
+    <li class="nav-item">
+      <a class="nav-link text-dark" [routerLink]="['/lockout']">Home page</a>
+    </li>
+    <li class="nav-item">
+        <button class="btn shadow-none" (click)="logout()" type="button">Logout</button>
+      </li>
+      <li class="nav-item">
+        <img src="/assets/img/WellNetLogoClear.png">
+      </li>
+   
+  </ul>
 <h2>Hi! Due to your answers to the Covid-19 Screening Form you have been locked out of your account. </h2>
 <h2>Please take care and focus on rest and recovery.</h2>
 <h1>You can start work in:</h1>
