--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -6,7 +6,7 @@
       <a class="nav-link text-dark" [routerLink]="['/profileEdit']">Edit profile</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link text-dark" [routerLink]="['']">Logout</a>
+        <a class="nav-link text-dark" (click)="logout()">Logout</a>
       </li>
    
   </ul>
