proper routing to pages from login, profile editing updating firebase and spring server, auth guard (WIP)

--- a/src/app/components/profile-edit/profile-edit.component.html
+++ b/src/app/components/profile-edit/profile-edit.component.html
@@ -15,7 +15,7 @@
                 
             </div>
 
-            <div id="RoleRadios">
+            <!-- <div id="RoleRadios">
                 <p id="roleTitle">
                   Hospital Role
                 </p>
@@ -34,7 +34,7 @@
                 <label for="RegistrationRole2">
                   Doctor
                 </label>
-              </div>
+              </div> -->
 
 
             <div class="form-group">
