--- a/src/app/static-style-tester/static-style-tester.component.html
+++ b/src/app/static-style-tester/static-style-tester.component.html
@@ -1,1 +1,48 @@
-<p>static-style-tester works!</p>
+<div class="row">
+    Possible color pallete:
+</div>
+<div class="row" id=Green2>
+    hello
+</div>
+<div class="row" id=Green3>
+    hello
+</div>
+<div class="row" id=Green4>
+    hello
+</div>
+<div class="row" id=Blue1>
+    hello
+</div>
+<div class="row" id=Blue2>
+    hello
+</div>
+<div class="row" id=Blue3>
+    hello
+</div>
+<div class="row" id=Blue4>
+    hello
+</div>
+<button type="button" class=Button1>
+    button 1 test
+</button>
+<button type="button" class=Button2>
+    button 2 test
+</button>
+<button type="button" class=Button3>
+    button 3 test
+</button>
+<button type="button" class=MenuButton>
+ 
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house" viewBox="0 0 16 16">
+        <path fill-rule="evenodd" d="M2 13.5V7h1v6.5a.5.5 0 0 0 .5.5h9a.5.5 0 0 0 .5-.5V7h1v6.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5zm11-11V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z"/>
+        <path fill-rule="evenodd" d="M7.293 1.5a1 1 0 0 1 1.414 0l6.647 6.646a.5.5 0 0 1-.708.708L8 2.207 1.354 8.854a.5.5 0 1 1-.708-.708L7.293 1.5z"/>
+      </svg>
+ 
+    Home page
+</button>
+<p class=font1>
+    font 1?
+</p>
+<p class=font2>
+    font 2?
+</p>
