--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -23,10 +23,10 @@
         <div><button (click)="forgetPassword()" class="RegisterButton">Forget Password</button> </div>
         <hr>
         
-        <!--
+       
         <div><button (click)="getUser()" class="RegisterButton">Get user info</button> </div>
         <div><button (click)="logout()" class="RegisterButton">Logout</button></div>
-        <div><button (click)="refreshToken()" class="RegisterButton"> Refresh Token</button> </div>-->
+        <div><button (click)="refreshToken()" class="RegisterButton"> Refresh Token</button> </div> <!---->
     </div>
 </div>
 <!-- <a routerLink="signup" routerLinkActive="active"><button>Create Account</button></a> -->
