--- a/src/app/components/rooms/rooms.component.html
+++ b/src/app/components/rooms/rooms.component.html
@@ -75,7 +75,7 @@
 
                     </div>
                     <div class="col-md-1">
-<!--Hall-->
+<!--Hall1-->
                     </div>
                     <div class="col-md-2 p-0">
                         <ng-container *ngFor="let item of rooms">
