--- a/src/app/components/profile-edit/profile-edit.component.html
+++ b/src/app/components/profile-edit/profile-edit.component.html
@@ -37,15 +37,15 @@
               </div>
 
 
-            <div class="form-group">
+            <!-- <div class="form-group">
                 <label for="lastName">Email</label>
                 <input type="text" class="form-control" #email  id="email" maxlength="200"
                   name="email" placeholder="Change your email">
-            </div>
+            </div> -->
 
     </div>
 
     <app-button text="Submit"
-        (click)="submit(firstname.value, lastname.value, email.value)"></app-button>
+        (click)="submit(firstname.value, lastname.value)"></app-button>
 
 </div>
