Appears to be one final blocker

--- a/src/app/components/diagnosis/diagnosis.component.html
+++ b/src/app/components/diagnosis/diagnosis.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1>You are logged in as a {{ user.role.role }}</h1>
+ <!-- <h1>You are logged in as a {{ user.role.role }}</h1> -->
   <div class="patient-info">
     <table>
       <thead>
