patient info can be passed in from doctor page

--- a/src/app/components/doctor/doctor.component.html
+++ b/src/app/components/doctor/doctor.component.html
@@ -17,7 +17,7 @@
     <div class="form-group">
         <!-- <label for="patient-search">Search for Patients</label> -->
         <input type="text" class="form-control" id="firstName" #firstName name="firstName" placeholder="Enter First Name" required>
-        <input type="text" class="form-control" id="lastName" #lastName  name="lastName" placeholder="Enter Last Name" required>           
+        <input type="text" class="form-control" id="lastName" #lastName  name="lastName" placeholder="Enter Last Name" required>
     </div>
     <div class="dob">
         <select name="dob" #dobMonth id="dobMonth">
@@ -85,6 +85,7 @@
         <table>
             <thead>
                 <tr>
+                    <th></th>
                     <th>Patient First Name</th>
                     <th>Patient Last Name</th>
                     <th>Date of Birth</th>
@@ -100,6 +101,7 @@
             </thead>
             <tbody>
                 <tr *ngFor="let patient of patientsArray">
+                    <td><app-button text="Enter Symptoms" (btnClick)="diagnosePatient(patient)"></app-button></td>
                     <td>{{patient.firstName}}</td>
                     <td>{{patient.lastName}}</td>
                     <td>{{patient.dob}}</td>
@@ -125,7 +127,7 @@
                     <td>{{patient.sex.sex}}</td>
                     <td>{{patient.doctor}}</td>
                 </tr>
-            </tbody> 
+            </tbody>
         </table>
     </div>
 
