Final blocker is when room is assigned to patient

--- a/src/app/components/nurse/nurse.component.html
+++ b/src/app/components/nurse/nurse.component.html
@@ -100,7 +100,7 @@
         </thead>
         <tbody>
             <tr *ngFor="let patient of patientsArray">
-              <td><app-button text="Enter Symptoms" (btnClick)="diagnosePatient(patient)"></app-button></td>
+              <td><app-button text="Perform Diagnosis" (btnClick)="diagnosePatient(patient)"></app-button></td>
                 <td>{{patient.firstName}}</td>
                 <td>{{patient.lastName}}</td>
                 <td>{{patient.dob}}</td>
