--- a/src/app/components/doctor/doctor.component.html
+++ b/src/app/components/doctor/doctor.component.html
@@ -101,7 +101,7 @@
             </thead>
             <tbody>
                 <tr *ngFor="let patient of patientsArray">
-                    <td><app-button text="Enter Symptoms" (btnClick)="diagnosePatient(patient)"></app-button></td>
+                    <td><app-button text="Prescribe Treatment" (btnClick)="diagnosePatient(patient)"></app-button></td>
                     <td>{{patient.firstName}}</td>
                     <td>{{patient.lastName}}</td>
                     <td>{{patient.dob}}</td>
