Minor Textual Edit

--- a/src/app/components/nurse/nurse.component.html
+++ b/src/app/components/nurse/nurse.component.html
@@ -47,8 +47,8 @@
                     <th>Date of Birth</th>
                     <!-- <th>Age</th> -->
                     <th>Allergies</th>
-                    <th>Height (In)</th>
-                    <th>Weight (LbbbbbS Palls Load Balancing System In Stones Like In Brittain Because We're Fancy)</th>
+                    <th>Height (in.)</th>
+                    <th>Weight (lbs.)</th>
                     <th>Vaccinations</th>
                     <th>Blood Type</th>
                     <th>Sex</th>
