--- a/src/app/components/doctor/doctor.component.html
+++ b/src/app/components/doctor/doctor.component.html
@@ -108,8 +108,8 @@
                     <th>Date of Birth</th>
                     <!-- <th>Age</th> -->
                     <th>Allergies</th>
-                    <th>Height (In InChEsSsSsSs......)</th>
-                    <th>Weight (LbbbbbS Palls Load Balancing System In Stones Like In Brittain Because We're Fancy)</th>
+                    <th>Height (in.)</th>
+                    <th>Weight (lbs.)</th>
                     <th>Vaccinations</th>
                     <th>Blood Type</th>
                     <th>Sex</th>
