aking test branch

--- a/src/app/components/diagnosis/diagnosis.component.html
+++ b/src/app/components/diagnosis/diagnosis.component.html
@@ -13,7 +13,7 @@
       <tbody>
         <tr>
           <td class="col-sm-6">Sex</td>
-          <td class="col-sm-6">{{ patient.sex }}</td>
+          <td class="col-sm-6">{{ patient.sex.sex }}</td>
         </tr>
         <tr>
           <td class="col-sm-6">Height</td>
@@ -25,7 +25,7 @@
         </tr>
         <tr>
           <td class="col-sm-6">Blood Type</td>
-          <td class="col-sm-6">{{ patient.bloodType }}</td>
+          <td class="col-sm-6">{{ patient.bloodType.type }}</td>
         </tr>
         <tr>
           <td class="col-sm-6">Allergies</td>
