--- a/src/app/components/patient-check-in/patient-check-in.component.html
+++ b/src/app/components/patient-check-in/patient-check-in.component.html
@@ -86,9 +86,9 @@
             <br>
             <span class = "asterix">*</span><label for="sex">Sex:</label>
                 <select id="sex" name="sex" class= "form-control" [(ngModel)] = "sex">
-                    <option value="M">M</option>
-                    <option value="F">F</option>
-                    <option value="NB">NB</option>
+                    <option value="M">Male</option>
+                    <option value="F">Female</option>
+                    <option value="NB">Other</option>
                 </select>
             <br>
             <div id = "allergyanchor">Allergies:</div>
