--- a/src/app/components/diagnosis/diagnosis.component.css
+++ b/src/app/components/diagnosis/diagnosis.component.css
@@ -5,3 +5,27 @@
   margin-top: 2px;
   margin-bottom: 2px;
 }
+
+.Button2 {
+  background-color: #239507;
+  border: none;
+  padding: 9px;
+  border-radius: 8px;
+  color: white;
+  font-size: 16px;
+  margin: 18px;
+  /* transition-duration: 0.5s; */
+
+ }
+
+.Button2:hover {
+ background-color: white;
+ border: 2px solid #239507;
+ color: #239507;
+ box-shadow: 3px 8px 6px 8px #888888;
+}
+
+.patient-info {
+  border: 1px solid rgb(119, 119, 119);
+  padding: 4px 10px;
+}
