--- a/src/app/components/doctor/doctor.component.html
+++ b/src/app/components/doctor/doctor.component.html
@@ -12,86 +12,104 @@
     </div>
 
 
+    <!-- <div id = "TempDiv">
+        <h1> All Patients Available (Displaying Available Fields) </h1>
 
-<div class="search-area">
+        <table class="table table-striped table-light table-hover
+        table-sm"
+        id="TempAllPatients">
+        <thead class="thead-light">
+        <tr>
+            <th scope="col"> First Name </th>
+            <th scope="col"> Last Name </th>
+            <th scope="col"> Patient ID </th>
+            <th scope="col"> DOB </th>
+            <th scope="col"> Sex </th>
+            <th scope="col"> Height </th>
+            <th scope="col"> Weight </th>
+        </tr>
+        </thead>
+
+        <tbody>
+
+       VVV From Patient Model VVV     
+    public patientId: number|null;
+    public firstName: string;
+    public lastName: string;
+    public dob: Date;
+    public height: number;
+    public weight: number;
+    public bloodType: string;
+    public sex: string;
+    public vaccinations?: object[];
+    public allergies?: object[];
+
+            <tr *ngFor="let t of tempAllPatients">
+                <td style="text-align : center;">{{t.patientId}}</td>
+                <td style="text-align : center;">{{t.firstName}}</td>
+                <td style="text-align : center;">{{t.lastName}}</td>
+                <td style="text-align : center;">{{t.dob}}</td>
+                VV Can Not Pull Out Without Sex Model Because Patient Currently STores As 
+                        The String sex_id In DBeaver Database And Does Not Map To Their
+                        Patient
+               <td style="text-align : center;">{{t.sex}}</td>
+                <td style="text-align : center;">{{t.height}}</td>
+                <td style="text-align : center;">{{t.weight}}</td>
+            </tr>
+        </tbody>
+    </table>
+
+    </div> -->
+
+    <div class="search-area">
     <div class="form-group">
         <!-- <label for="patient-search">Search for Patients</label> -->
         <input type="text" class="form-control" id="firstName" #firstName name="firstName" placeholder="Enter First Name" required>
         <input type="text" class="form-control" id="lastName" #lastName  name="lastName" placeholder="Enter Last Name" required>           
     </div>
-    <div class="dob">
-        <select name="dob" #dobMonth id="dobMonth">
-            <option value=''>Please choose a value below</option>
-            <option value='01'>1</option>
-            <option value='02'>2</option>
-            <option value='03'>3</option>
-            <option value='04'>4</option>
-            <option value='05'>5</option>
-            <option value='06'>6</option>
-            <option value='07'>7</option>
-            <option value='08'>8</option>
-            <option value='09'>9</option>
-            <option value='10'>10</option>
-            <option value='11'>11</option>
-            <option value='12'>12</option>
-        </select>
-        <select name="dob" #dobDay id="dobDay">
-            <option value=''>Please choose a value below</option>
-            <option value='1'>1</option>
-            <option value='2'>2</option>
-            <option value='3'>3</option>
-            <option value='4'>4</option>
-            <option value='5'>5</option>
-            <option value='6'>6</option>
-            <option value='7'>7</option>
-            <option value='8'>8</option>
-            <option value='9'>9</option>
-            <option value='10'>10</option>
-            <option value='11'>11</option>
-            <option value='12'>12</option>
-            <option value='13'>13</option>
-            <option value='14'>14</option>
-            <option value='15'>15</option>
-            <option value='16'>16</option>
-            <option value='17'>17</option>
-            <option value='18'>18</option>
-            <option value='19'>19</option>
-            <option value='20'>20</option>
-            <option value='21'>21</option>
-            <option value='22'>22</option>
-            <option value='23'>23</option>
-            <option value='24'>24</option>
-            <option value='25'>25</option>
-            <option value='26'>26</option>
-            <option value='27'>27</option>
-            <option value='28'>28</option>
-            <option value='29'>29</option>
-            <option value='30'>30</option>
-            <option value='31'>31</option>
-        </select>
-        <input type="text" #dobYear id="dobYear" placeholder="Enter Year">
-    </div>
+
+    <label for= "dob">Date of Birth:</label>
+    <input
+        type= "date"
+        class= "form-control"
+        name= "dob"
+        id= "dob"
+        #dobField
+    >
+
     <div class="button-group">
-        <app-button id="searchId" class="btn btn-search" (btnClick)="searchPatient()" text="Search for Patients"></app-button>
+         <app-button id="searchId" class="btn btn-search" (btnClick)="getAllPatients()" text="Display All Patients"></app-button>
         <app-button id="searchName"  class="btn btn-search" (btnClick)="searchPatByFName(firstName.value)" text="Search for Patients by First Name"></app-button>
         <app-button id="searchFullName"  class="btn btn-search" (btnClick)="searchPatByFullName(firstName.value, lastName.value)" text="Search for Patients by Last Name"></app-button>
-        <app-button id="searchDOB" class="btn btn-search" (btnClick)="searchPatNameDate(firstName.value, lastName.value, dobYear.value, dobMonth.value, dobDay.value)" text="Search for Patients by First, Last, and Date of Birth"></app-button>
+        <app-button id="searchDOB" class="btn btn-search" (btnClick)="searchPatNameDate(firstName.value, lastName.value, dobField.value)" text="Search for Patients by First, Last, and Date of Birth"></app-button>
     </div>
 </div>
 
+<div class="DoctorSearchArea">
+    
+    <div class="form-group">
+        <!-- <label for="patient-search">Search for Patients</label> -->
+        <input type="text" class="form-control" id="doctorFirstName" #doctorFirstName name="doctorFirstName" placeholder="Enter First Name" required>
+        <input type="text" class="form-control" id="doctorLastName" #doctorLastName  name="doctorLastName" placeholder="Enter Last Name" required>           
+    </div>
 
+
+    <app-button id="searchDoctor" class="btn btn-search" (btnClick)="searchByDoctor(doctorFirstName.value, doctorLastName.value)" text="Search By Doctor"></app-button> 
+
+</div>
 
     <div class="table">
         <table>
             <thead>
                 <tr>
+                    <th *ngIf="searchingDoctor"> Doctor </th>
                     <th>Patient First Name</th>
                     <th>Patient Last Name</th>
                     <th>Date of Birth</th>
                     <!-- <th>Age</th> -->
                     <th>Allergies</th>
-                    <th>Height</th>
-                    <th>Weight</th>
+                    <th>Height (in.)</th>
+                    <th>Weight (lbs.)</th>
                     <th>Vaccinations</th>
                     <th>Blood Type</th>
                     <th>Sex</th>
@@ -100,28 +118,30 @@
             </thead>
             <tbody>
                 <tr *ngFor="let patient of patientsArray">
+                    <td *ngIf="searchingDoctor"> {{doctorName}}</td>
                     <td>{{patient.firstName}}</td>
                     <td>{{patient.lastName}}</td>
                     <td>{{patient.dob}}</td>
                     <!-- <td>{{patient.dob}}</td> -->
                     <td>
                         <ul>
-                            <li  *ngFor = "let allergy of patient.allergies">
+                            <li  *ngFor = "let allergy of patient.patientAllergies">
                                 {{allergy.allergy}}
                             </li>
                         </ul>
                     </td>
-                    <td>{{patient.height}}</td>
-                    <td>{{patient.weight}}</td>
+                    <td>{{patient.height}}"</td>
+                    <td>{{patient.weight}} lbs</td>
                     <td>
                         <ul>
-                            <li  *ngFor = "let vax of patient.vaccinations">
+                            <li  *ngFor = "let vax of patient.patientVaccinations">
                                 {{vax.vaccination}}
                             </li>
                         </ul>
                         <!-- {{patient.vaccinations[0].vaccination}} -->
                     </td>
-                    <td>{{patient.bloodType.type}}</td>
+                    <td *ngIf="!patient.bloodType"></td>
+                    <td *ngIf="patient.bloodType">{{patient.bloodType.type}}</td>
                     <td>{{patient.sex.sex}}</td>
                     <td>{{patient.doctor}}</td>
                 </tr>
