--- a/src/app/components/profile-edit/profile-edit.component.html
+++ b/src/app/components/profile-edit/profile-edit.component.html
@@ -15,7 +15,7 @@
                 
             </div>
 
-            <div id="RoleRadios">
+            <!-- <div id="RoleRadios">
                 <p id="roleTitle">
                   Hospital Role
                 </p>
@@ -34,18 +34,18 @@
                 <label for="RegistrationRole2">
                   Doctor
                 </label>
-              </div>
+              </div> -->
 
 
-            <div class="form-group">
+            <!-- <div class="form-group">
                 <label for="lastName">Email</label>
                 <input type="text" class="form-control" #email  id="email" maxlength="200"
                   name="email" placeholder="Change your email">
-            </div>
+            </div> -->
 
     </div>
 
     <app-button text="Submit"
-        (click)="submit(firstname.value, lastname.value, email.value)"></app-button>
+        (click)="submit(firstname.value, lastname.value)"></app-button>
 
 </div>
