--- a/src/app/components/registration/registration.component.html
+++ b/src/app/components/registration/registration.component.html
@@ -46,7 +46,7 @@
     <label for="RegistrationPassword">
       Password
     </label>
-    <input type="text" class="RegistrationPassword"
+    <input type="password" class="RegistrationPassword"
       #RegistrationPassword
       (keyup.enter)="updatePassword(RegistrationPassword.value)"
       (blur)="updatePassword(RegistrationPassword.value)"
@@ -97,7 +97,7 @@
     </label>
     <input type="text" class="RegistrationEmail"
       #RegistrationEmail
-      (keyup.enter)="updateEmail(RegistrationEmail.value)"
+      
       (blur)="updateEmail(RegistrationEmail.value)"
       onkeydown="return event.key != 'Enter';"
       autocomplete = "off">
@@ -107,7 +107,7 @@
     <p class="RegistrationSpacer"></p>
     <p class="RegistrationSpacer" *ngIf="emailValidated == true || emailValidated === null"></p>
 
-    <div id="RegistrationCovidRadios">
+    <!-- <div id="RegistrationCovidRadios">
       <p for="CovidValidation" clas="RegistrationCovidTitle">
         Do you currently have Covid-19 Symptoms?
       </p>
@@ -126,19 +126,19 @@
       <label for="RegistrationCovidStatus2">
         No
       </label>
-    </div>
+    </div> -->
 
     <div class="CenterContainerContent">
-    <button type="button" (click)="updateValues()" 
+      <button type="button" (click)="updateValues()" 
       class="RegisterButton" [disabled] = "registrationButtonSetting"
       *ngIf="covidStatus == false">
       Register User
     </button>
 
-    <p id="RegistrationCovidNotice"
+    <!-- <p id="RegistrationCovidNotice"
       *ngIf="covidStatus == true">
       You Have Covid <br> Go Home!! <br> Login Denied
-    </p>
+    </p> -->
 
     </div>
 
@@ -155,9 +155,9 @@
   <p> Entered Role : {{role}} </p>
   <p> Entered Email : {{email}} </p>
 
-  <button type="button" (click)="rng()">
+  <!-- <button type="button" (click)="rng()">
     rng
-  </button>
+  </button> -->
 
   </div>
 </div>
