create new vaccines, allergies

--- a/src/app/components/doctor/doctor.component.html
+++ b/src/app/components/doctor/doctor.component.html
@@ -7,6 +7,7 @@
     <app-button class="btn btn-top-left" (btnClick) = "goBack()" text = "Back"></app-button>
 
     <div class="top-right">
+    <app-button class="btn" (btnClick) = "routeToAdd()" text = "Add Patient Options"></app-button>
     <app-button class="btn" (btnClick) = "viewUserInfo()" text = "View User Info"></app-button>
     <app-button class="btn" (btnClick) = "logout()" text = "Logout"></app-button>
     </div>
