--- a/src/app/components/nurse/nurse.component.html
+++ b/src/app/components/nurse/nurse.component.html
@@ -6,6 +6,7 @@
 <app-button class="btn btn-top-left" (btnClick)="goBack()" text="Back"></app-button>
 
 <div class="top-right">
+    <app-button class="btn" (btnClick)="routeToAdd()"text="Add Patient Options"></app-button>
     <app-button class="btn" (btnClick)="getInfo()" text="View User Info"></app-button>
     <app-button class="btn" (btnClick)="logout()"text="Logout"></app-button>
 </div>
